--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@purinton/architect",
     "type": "module",
     "version": "1.0.0",
-    "description": "A modern Discord app built with Node.js, based on the purinton/discord foundation.",
+    "description": "AI-powered Discord server automation and administration. Integrates Model Context Protocol (MCP) and OpenAI for natural language server management, built on the purinton/discord foundation.",
     "main": "architect.mjs",
     "scripts": {
         "start": "node architect.mjs",
@@ -13,6 +13,15 @@
         "url": "git+https://github.com/purinton/architect.git"
     },
     "keywords": [
+        "discord",
+        "ai",
+        "openai",
+        "mcp",
+        "automation",
+        "bot",
+        "admin",
+        "server management",
+        "purinton",
         "architect",
         "nodejs"
     ],
